--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -3,24 +3,12 @@
 
     <section class="flex-col md:flex-row flex items-center md:justify-between mt-16 mb-16 md:mb-12">
       <h1 class="text-6xl md:text-8xl font-bold tracking-tighter leading-tight md:pr-8">
-        Blog.
+        <img src="https://www.datocms-assets.com/132822/1717100996-ljungby-fishing-logga.jpg" width="450">
       </h1>
       <h4 class="text-center md:text-left text-lg mt-5 md:pl-8">
-        A statically generated blog example using{" "}
-        <a
-          href="https://astro.build/"
-          class="underline hover:text-success duration-200 transition-colors"
-        >
-          Astro
-        </a>{" "}
-        and{" "}
-        <a
-          href="https://www.datocms.com/"
-          class="underline hover:text-success duration-200 transition-colors"
-        >
-          DatoCMS
-        </a>
-        .
+        Öppettider: Måndag-Fredag 10-18, <br>
+        Lördag 10-15, Söndag 11-15.<br>
+Ringvägen 1A (vid Ljungbystopp) Telefon: 0372-125 00<br>
+{" "}
       </h4>
     </section>
-
