--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -7,6 +7,7 @@ import PostBody from "../../components/post-body";
 import SectionSeparator from "../../components/section-separator";
 import { metaTagsFragment, responsiveImageFragment } from "../../lib/fragments";
 import Layout from "../../components/layout";
+import AstroLayout from "../../layouts/Layout.astro";
 
 const { slug } = Astro.params
 
@@ -134,6 +135,7 @@ for(const slug of parsedSlugResponse.data.allPosts){
 }
 ---
 
+<AstroLayout title={post.title}>
 <Layout preview={false} currentSlug={`posts/${slug}`}>
   <Container>
     <HeaderBlog preview={false} />
@@ -155,3 +157,4 @@ for(const slug of parsedSlugResponse.data.allPosts){
     />
   </Container>
 </Layout>
+</AstroLayout>
